--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -69,7 +69,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         env:
-          NEXT_PUBLIC_SITE_URL: https://ravishekr7.github.io
+          NEXT_PUBLIC_SITE_URL: https://ishu.jasrajpuria.github.io
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
