Update workflow to copy public assets to out folder before deployment

--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -71,6 +71,11 @@ jobs:
         env:
           NEXT_PUBLIC_SITE_URL: https://ishu.jasrajpuria.github.io
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Copy public assets to out
+        run: |
+          if [ -d "public" ]; then
+            cp -r public/* out/ || true
+          fi
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
